Carousel with ui bootstrap

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
+    <!-- <meta name="description" content="">
+    <meta name="author" content=""> -->
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
     <base href="/"/>
-
     <title>WebChat Application</title>
 
     <!-- Bootstrap core CSS -->
@@ -63,6 +61,7 @@
     </div> <!-- /container -->
     <script type="text/javascript" src="static/libs/angular/angular.js"></script>
     <script type="text/javascript" src="static/libs/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="static/libs/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script type="text/javascript" src="static/js/app.js"></script>
     <script type="text/javascript" src= "static/js/controllers/homeController.js"></script>
     <script type="text/javascript" src= "static/js/controllers/navController.js"></script>
