--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -12,14 +12,13 @@
   </div> -->
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-  <div ng-controller="CarouselDemoCtrl">
+  <div ng-controller="homeController">
   <div style="height: 300px">
     <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-      <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id" active="slide.active>
+      <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id" active="slide.active">
         <img ng-src="{{slide.image}}" style="margin:auto;">
         <div class="carousel-caption">
           <h4>Slide {{slide.id}}</h4>
-          <p>{{slide.text}}</p>
         </div>
       </div>
     </div>
